resolving a text cutoff bug in firefox for select box

--- a/src/less/mixins/forms.less
+++ b/src/less/mixins/forms.less
@@ -104,9 +104,7 @@
     }
   select& {
     height: @input-height-base;
-    font-size: @font-size;
-    line-height: @line-height;
-    width: 100%;
+    padding: 0;
   }
 
   textarea&,
